WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64543
[EFL] Account for the invalid pointer case in WebCore::screenRect()
https://bugs.webkit.org/show_bug.cgi?id=64543
Summary
[EFL] Account for the invalid pointer case in WebCore::screenRect()
Raphael Kubo da Costa (:rakuco)
Reported
2011-07-14 11:11:46 PDT
[EFL] Account for the invalid pointer case in WebCore::screenRect()
Attachments
Patch
(1.53 KB, patch)
2011-07-14 11:12 PDT
,
Raphael Kubo da Costa (:rakuco)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Raphael Kubo da Costa (:rakuco)
Comment 1
2011-07-14 11:12:53 PDT
Created
attachment 100831
[details]
Patch
Antonio Gomes
Comment 2
2011-07-19 01:56:58 PDT
Comment on
attachment 100831
[details]
Patch Do you need to unskip a test?
WebKit Review Bot
Comment 3
2011-07-19 03:24:29 PDT
Comment on
attachment 100831
[details]
Patch Clearing flags on attachment: 100831 Committed
r91247
: <
http://trac.webkit.org/changeset/91247
>
WebKit Review Bot
Comment 4
2011-07-19 03:24:34 PDT
All reviewed patches have been landed. Closing bug.
Raphael Kubo da Costa (:rakuco)
Comment 5
2011-07-19 06:02:54 PDT
(In reply to
comment #2
)
> (From update of
attachment 100831
[details]
) > Do you need to unskip a test?
Not really; our skipped list is not upstream yet.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug