[EFL] Account for the invalid pointer case in WebCore::screenRect() https://bugs.webkit.org/show_bug.cgi?id=64543

Patch by Raphael Kubo da Costa <kubo@profusion.mobi> on 2011-07-19
Reviewed by Antonio Gomes.

Fix a regression introduced in r88245: it assumes the pointer passed
to screenRect() is always valid.
fast/frames/crash-removed-iframe.html proves this is not always true,
so we need to do some sanity check on the pointer before using it.
No new tests as this has been caught by the current test suite.

* platform/efl/PlatformScreenEfl.cpp:
(WebCore::screenRect):

Canonical link: https://commits.webkit.org/80495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91247 268f45cc-cd09-0410-ab3c-d52691b4dbfc